--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<em>Стихотворение</em> <b>про</b> ёлочку.<br/>
 	В лесу <strong>она</strong> росла.
 	</p>
-	<a href="https://www.nnm-club.me" target=_blank>NNM-CLUB</a><br/>
+	<a href="https://www.rambler.ru" target=_blank>CLUB</a><br/>
 	<a href="photo.html#about">About</a><br/>
 	<!--
 	<img src="1.jpg" alt="Monkey" width="120" height="240"/>
