--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 	<em>Стихотворение</em> <b>про</b> ёлочку.<br/>
 	В лесу <strong>она</strong> росла.
 	</p>
-	<a href="https://www.rambler.ru" target=_blank>CLUB</a><br/>
+	<a href="task1.html" target=_blank>Task 1</a><br/>
+	<a href="task2.html" target=_blank>Task 2</a><br/>
+	
 	<a href="photo.html#about">About</a><br/>
 	<!--
 	<img src="1.jpg" alt="Monkey" width="120" height="240"/>
