--- a/task2.html
+++ b/task2.html
@@ -18,44 +18,46 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td bgcolor="#ffffff" colspan="2"><br/><br/></td>
-				<td bgcolor="#ffffff" colspan="3"><br/><br/></td>
+				<td bgcolor="#dae3e6" colspan="2"><br/><br/></td>
+				<td bgcolor="#dae3e6" colspan="3"><br/><br/></td>
 				<td bgcolor="#fffa69" colspan="2"><br/><br/></td>
 			</tr>
 			<tr>
-				<td bgcolor="#ffffff" rowspan="2"><br/><br/><br/></td>
-				<td bgcolor="#ff5b2d" colspan="4" rowspan="4"><br/><br/><br/></td>
-				<td bgcolor="#fffa69" colspan="2" rowspan="2"><br/><br/><br/></td>
+				<td bgcolor="#dae3e6" rowspan="2"><br/><br/><br/><br/></td>
+				<td bgcolor="#ff5b2d" colspan="4" rowspan="4"><br/><br/><br/><br/></td>
+				<td bgcolor="#fffa69" colspan="2" rowspan="2"><br/><br/><br/><br/></td>
 			</tr>
 			<tr>
 			</tr>
 			<tr>
-				<td bgcolor="#ffffff" rowspan="3"><br/><br/><br/><br/></td>
-				<td bgcolor="#ffffff" rowspan="2"><br/><br/><br/><br/></td>
-				<td bgcolor="#ffffff" rowspan="2"><br/><br/><br/><br/></td>
+				<td bgcolor="#dae3e6" rowspan="3"><br/><br/><br/><br/></td>
+				<td bgcolor="#dae3e6" rowspan="2"><br/><br/><br/><br/></td>
+				<td bgcolor="#dae3e6" rowspan="2"><br/><br/><br/><br/></td>
 			</tr>
 			<tr>
 			</tr>
 			<tr>
 				<td bgcolor="#000000" colspan="2"><br/><br/></td>
-				<td bgcolor="#ffffff" colspan="2"><br/><br/></td>
-				<td bgcolor="#ffffff" colspan="2"><br/><br/></td>
+				<td bgcolor="#dae3e6" colspan="2"><br/><br/></td>
+				<td bgcolor="#dae3e6" colspan="2"><br/><br/></td>
 			</tr>
 			<tr>
 				<td bgcolor="#fffa69" rowspan="3"><br/><br/></td>
 				<td bgcolor="#000000" colspan="2"><br/><br/></td>
-				<td bgcolor="#ffffff" colspan="2"><br/><br/></td>
+				<td bgcolor="#dae3e6" colspan="2"><br/><br/></td>
 				<td bgcolor="#074481" rowspan="2" colspan="2"><br/><br/></td>
 			</tr>
 			<tr>
-				<td bgcolor="#ffffff" rowspan="2" colspan="2"><br/></td>
+				<td bgcolor="#dae3e6" rowspan="2" colspan="2"><br/></td>
 				<td bgcolor="#000000" colspan="2"><br/></td>
 			</tr>
 			<tr>
-				<td bgcolor="#ffffff" colspan="4"><br/><br/><br/></td>
+				<td bgcolor="#dae3e6" colspan="4"><br/><br/><br/></td>
 			</tr>
 		</tbody>
 	</table>
+	
+	<img src="images/pm_reb_1926.jpg" width="430px alt="Композиция с красным, синим и желтым">
 	
 </body>
 
