--- a/task2.html
+++ b/task2.html
@@ -52,7 +52,7 @@
 				<td bgcolor="#000000" colspan="2"><br/></td>
 			</tr>
 			<tr>
-				<td bgcolor="#dae3e6" colspan="4"><br/><br/><br/></td>
+				<td bgcolor="#dae3e6" colspan="4"><br/><br/></td>
 			</tr>
 		</tbody>
 	</table>
