--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	</p>
 	<a href="task1.html" target=_blank>Task 1</a><br/>
 	<a href="task2.html" target=_blank>Task 2</a><br/>
+	<a href="task3.html" target=_blank>Task 3</a><br/>
+	<a href="task4.html" target=_blank>Task 4</a><br/>
 	
 	<a href="photo.html#about">About</a><br/>
 	<!--
