--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	<a href="task2.html" target=_blank>Task 2</a><br/>
 	<a href="task3.html" target=_blank>Task 3</a><br/>
 	<a href="task4.html" target=_blank>Task 4</a><br/>
+	<a href="task4.html" target=_blank>Task 5</a><br/>
+	<a href="task4.html" target=_blank>Task 6</a><br/>
 	
 	<a href="photo.html#about">About</a><br/>
 	<!--
