--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</head>
 	<body>
 		<header>
-			<nav>
+		<!-- Navigation menu -->
+			<nav class="main-nav">
 				<ul class="menu">
 					<li><a class="menu_link" href="#">Главная</a></li>
 					<li><a class="menu_link" href="">Новости<i class="shell-icon"></i></a>
@@ -39,7 +40,7 @@
 				</ul>
 			</nav>
 		</header>
-		<!-- Content blocks -->
+		<!-- Content block -->
 		<div class="holder">
 			<h1 class="testimonial_section">Первая глава</h1></h1>
 			<div class="testimonial">
@@ -57,13 +58,7 @@
 					</div>
 				</div><div class="testimonial_item">
 					<div class="testimonial_inner">
-						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/2/" alt="testimonial"></img>
-						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
-					</div>
-					</div><div class="testimonial_item">
-					<div class="testimonial_inner">
-						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/2/" alt="testimonial"></img>
+						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/3/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
 						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
 					</div>
@@ -73,30 +68,32 @@
 			<div class="testimonial">
 				<div class="testimonial_item">
 					<div class="testimonial_inner">
-						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/2/" alt="testimonial"></img>
+						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/4/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
 						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
 					</div>
 				</div><div class="testimonial_item">
 					<div class="testimonial_inner">
-						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/1/" alt="testimonial"></img>
-						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
-					</div>
-				</div><div class="testimonial_item">
-					<div class="testimonial_inner">
-						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/2/" alt="testimonial"></img>
-						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
-					</div>
-				</div><div class="testimonial_item">
-					<div class="testimonial_inner">
-						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/1/" alt="testimonial"></img>
+						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/5/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
 						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#"><i class="more"></i>more</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</body>
+		<!-- Site footer -->
+		<footer id="colophon">
+			<nav class="footer-nav">
+				<div class="col col-1"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+				</div>
+				<div class="col col-2">
+				<p>Lorem ipsum dolor sit amet.</p>
+				<p>Nemo, in assumenda voluptate laudantium.</p>
+				</div>
+				<div class="col col-3">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, distinctio?</p>
+				</div>
+			</nav>
+		</footer>	
+		</body>
 </html>
