--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<div class="testimonial_inner">
 						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/3/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
+						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. <a href="#"><i class="more"></i>more</a></p>
 					</div>
 					</div>
 			</div>
@@ -70,7 +70,7 @@
 					<div class="testimonial_inner">
 						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/4/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
+						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
 					</div>
 				</div><div class="testimonial_item">
 					<div class="testimonial_inner">
