--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head lang="ru">
 		<meta charset="utf-8"/>
-		<title>menu</title>
+		<title>Main data</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
@@ -35,48 +35,46 @@
 							<li><a class="menu_link" href="">TEXTt</a></li>
 						</ul>
 					</li>
-					
 					<li class="more_menu"><a class="menu_link" href="">Инфо</a></li>
 				</ul>
 			</nav>
 		</header>
 		<!-- Content block -->
 		<div class="holder">
-			<h1 class="testimonial_section">Первая глава</h1></h1>
 			<div class="testimonial">
 				<div class="testimonial_item">
 					<div class="testimonial_inner">
 						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/1/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. <a href="#"><i class="more"></i>more</a></p>
+						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.
+						Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more">more</i></a></p>
 					</div>
 				</div><div class="testimonial_item">
 					<div class="testimonial_inner">
 						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/2/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
+						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. 
+						Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more">more</i></a></p>
 					</div>
 				</div><div class="testimonial_item">
 					<div class="testimonial_inner">
 						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/3/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. <a href="#"><i class="more"></i>more</a></p>
+						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. 
+						Sed sit amet ipsum mauris. <a href="#"><i class="more">more</i></a></p>
 					</div>
-					</div>
-			</div>
-			<h1 class="testimonial_section">Вторая глава</h1>
-			<div class="testimonial">
-				<div class="testimonial_item">
+				</div><div class="testimonial_item">
 					<div class="testimonial_inner">
 						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/4/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more"></i>more</a></p>
+						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+						Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. <a href="#"><i class="more">more</i></a></p>
 					</div>
 				</div><div class="testimonial_item">
 					<div class="testimonial_inner">
 						<img class="testimonial_image" src="http://lorempixel.com/85/85/people/5/" alt="testimonial"></img>
 						<h2 class="testimonial_title">Integer vitae libero</h2>
-						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#"><i class="more"></i>more</a></p>
+						<p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#"><i class="more">more</i></a></p>
 					</div>
 				</div>
 			</div>
@@ -95,5 +93,5 @@
 				</div>
 			</nav>
 		</footer>	
-		</body>
+	</body>
 </html>
